# guardrail-compliance-engine

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Dockerfile  Makefile  PHASE_STATUS.md  README.md  environment.yml  policy-source.txt  pyproject.toml
.github/workflows/: ci.yml  compliance-check.yml
docs/: architecture.md  ci-cd-integration.md  getting-started.md  how-it-works.md  index.md  writing-policies.md
examples/cloudformation/: compliant-stack.yaml  noncompliant-stack.yaml
examples/kubernetes/: compliant-deployment.yaml  noncompliant-deployment.yaml  noncompliant-pod.yaml
examples/terraform/: aws-services.tf  compliant-iam-password-policy.tf  compliant-rds.tf  compliant-s3.tf  noncompliant-ec2.tf  noncompliant-iam-password-policy.tf  noncompliant-s3.tf
policies/: cis-aws-foundations.yaml  hipaa-basic.yaml  pci-dss-basic.yaml  soc2-basic.yaml
scripts/: bedrock_smoke.py
src/guardrail_compliance/: __init__.py  cli.py
src/guardrail_compliance/core/: __init__.py  engine.py  guardrail_client.py  models.py  normalization.py  policy_manager.py
src/guardrail_compliance/parsers/: __init__.py  base.py  cloudformation.py  kubernetes.py  terraform.py
src/guardrail_compliance/policies/: __init__.py  cis_aws.py  custom.py  hipaa.py  pci_dss.py  registry.py  soc2.py
src/guardrail_compliance/policy_data/: cis-aws-foundations.yaml  custom-example.yaml  k8s-security.yaml  pci-dss-basic.yaml
src/guardrail_compliance/remediation/: __init__.py  snippets.py
src/guardrail_compliance/reporting/: __init__.py  console.py  github_pr.py  html_report.py  json_report.py  sarif.py
src/guardrail_compliance/utils/: __init__.py  config.py  exceptions.py  logging_config.py  secrets.py
tests/: conftest.py  test_additional_frameworks.py  test_aws_resources.py  test_bedrock_integration.py  test_cli.py  test_config.py  test_engine.py  test_github_pr.py  test_guardrail_client.py  test_k8s_rules.py  test_new_features.py  test_normalization.py  test_parsers.py  test_policies.py  test_policy_manager.py  test_remediation.py  test_reporting.py
